SKRIT-514: Fix notification dialog backdrop position on smaller windows

--- a/app/styles/application.scss
+++ b/app/styles/application.scss
@@ -20,7 +20,7 @@ gelato-application {
 .modal-backdrop {
   width: 100%;
   left: 0%;
-  z-index: 8000;
+  z-index: 5000;
   transition: width .2s, left .2s, right .2s;
 }
 
